--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <div class="contenedor-imagenes">
                 <img src="Perfil experto.png" width="550" height="800">
                 <img src="Idelfonso.png" width="550" height="800">
+                <img src="david.jpg" width="630" height="960">
             </div>
             <video src="./WhatsApp Video 2024-02-23 at 7.37.03 PM.mp4" controls></video>
         </div>
@@ -90,10 +91,38 @@
         <h3 class="titulos">Justificación lugar de inspiración:</h3>
         <p>escogimos Islandia como lugar de inspiración para mejorar la seguridad en el sector de la colina en Bogotá debido a su enfoque proactivo en la prevención del crimen y la colaboración comunitaria. En Islandia, se fortalecen los lazos familiares, se promueven actividades recreativas y deportivas para jóvenes, y se implementan políticas gubernamentales que abordan las causas subyacentes del crimen, como el desempleo y el consumo de drogas. La colaboración entre vecinos, autoridades y organizaciones es clave para identificar y abordar problemas, promoviendo así un sentido de responsabilidad compartida en la seguridad pública.</p>
         <img src="" alt="">
-
-
     </div>
-
+    <div class="separacion"></div>
+    <div class="evidencia">
+        <h3 class="titulos2">Evidencia del Trabajo en Clase</h3>
+    </div>
+    <div>
+        <ul class="listaposti">
+            <li>
+                <img src="posti1.jpg" alt="" class="imagenesposti">
+            </li>
+            <li>
+                <img src="posti2.jpg" alt="" class="imagenesposti"> 
+            </li>
+            <li>
+                <img src="posti3.jpg" alt="" class="imagenesposti">
+            </li>
+        </ul>
+    </div>
+    <div class="separacion"></div>
+    <div>
+        <ul class="listaposti">
+            <li>
+                <img src="posti4.jpeg" alt="" class="imagenesposti">
+            </li>
+            <li>
+                <img src="posti5.jpeg" alt="" class="imagenesposti"> 
+            </li>
+            <li>
+                <img src="posti6.jpeg" alt="" class="imagenesposti">
+            </li>
+        </ul>
+    </div>
     <footer id="contacto">
         <p>Contacto: sofiaguro@unisabana.edu.co</p>
     </footer>
