--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <img src="Documento A4 Hoja de Vida Moderno Rosa Beige.png" width="550" height="800">
             <img src="catalina afectada.png" width="550" height="800">
             <img src="./mauricio.png" alt="" width="550" height="800">
+            <img src="david.jpg" width="630" height="960">
         </div>
     </div>
 
@@ -67,7 +68,7 @@
             <div class="contenedor-imagenes">
                 <img src="Perfil experto.png" width="550" height="800">
                 <img src="Idelfonso.png" width="550" height="800">
-                <img src="david.jpg" width="630" height="960">
+                
             </div>
             <video src="./WhatsApp Video 2024-02-23 at 7.37.03 PM.mp4" controls></video>
         </div>
@@ -108,6 +109,18 @@
                 <img src="posti3.jpg" alt="" class="imagenesposti">
             </li>
         </ul>
+        <h4 class="titulos2">Insights</h4>
+        <ul>
+            <li>
+                ¿Cómo podríamos proteger a la comunidad desde el momento en el que sALEN a la calle hasta el momento en el que llegan a su hogar nuevamente?
+            </li>
+            <li>
+                ¿Cómo podríamos evitar las situaciones donde se les facilite a los ladrones hacer uso de su modus operandi según lo identificado por la comunidad?            
+            </li>
+            <li>
+                ¿Cómo podríamos mejorar la efectividad de los polícias para abordar las preocupaciones sobre su presunta ineficacia?
+            </li>
+        </ul>
     </div>
     <div class="separacion"></div>
     <div>
@@ -121,6 +134,40 @@
             <li>
                 <img src="posti6.jpeg" alt="" class="imagenesposti">
             </li>
+        </ul>
+        <h4 class="titulos2">Prueba de Valor</h4>
+        <ul>
+            <li>
+                ¿Cómo podríamos junto con la policía proteger a la comunidad desde el momento en el que salen a la calle hasta el momento en que llegan a su hogar? 
+            </li>
+            <li>
+                Idea escogida: Wearable
+                <ul>
+                    <li>Sistema de alerta de emergencia</li>
+                    <li>Sensor de caídas
+                    </li>
+                    <li>GPS y seguimiento de ubicación
+                    </li>
+                    <li>Notificaciones de condiciones peligrosas</li>
+                    <li>Comunicación de grupo</li>
+                    <li>Registro de actividad y seguimiento de salud</li>
+                    <li>Linterna incorporada</li>
+                    <li>Resistencia al agua y durabilidad
+                    </li>
+                    <li>Big data, automatización.
+                    </li>
+
+                </ul>         
+            </li>
+            <li>
+                <img src="fotow.png" alt="">
+            </li>
+        </ul>
+        <h4 class="titulos2">Guión Gráfico</h4>
+        <ul>
+            <li><img src="guion1.png" alt=""></li>
+            <li><img src="guion2.png" alt=""></li>
+            <li><img src="gion3.png" alt=""></li>
         </ul>
     </div>
     <footer id="contacto">
